feat: Security hardening and production-ready improvements
## Security Fixes
- Fix Grafana port binding to localhost only (127.0.0.1:3000)
- Add security hardening to redis-exporter (no-new-privileges, cap_drop)
- Fix HAProxy stats to use environment variables instead of hardcoded password
- Fix manage.sh Valkey password usage with proper env variable
- Fix RouteDNS health check to properly detect failures
- Add allowed-net restrictions to RouteDNS listeners

## New Files
- .env.example: Environment template with placeholder passwords
- .gitignore: Prevent accidental commit of secrets and certificates
- Dockerfile: HAProxy 3.3 with Lua support

## Documentation
- Complete README.md rewrite for production deployment
- Added architecture diagram
- Added security hardening documentation
- Added troubleshooting guide
- Added API reference
- Added management commands documentation

## Configuration Updates
- docker-compose.yml: Security improvements for all containers
- haproxy.cfg: Environment variable support for stats auth
- routedns/config.toml: Added security comments for listeners
- manage.sh: Fixed Valkey password in health checks

--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,23 @@
 .env
 .env.*
 !.env.example
+.env.local
+.env.production
+*.env
 
 # SSL/TLS certificates and keys
-
 *.key
 *.crt
 *.p12
 *.pfx
-
+*.pem
+haproxy/certs/*.pem
+haproxy/certs/fullchain.pem
+haproxy/certs/privkey.pem
+haproxy/certs/dot.pem
+haproxy/certs/*.key
+haproxy/certs/*.crt
+!haproxy/certs/README.md
 
 # Backups
 backups/
@@ -42,3 +51,4 @@ Thumbs.db
 *.tmp
 *.temp
 tmp/
+*.bak
