--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -190,8 +190,10 @@ frontend ft_stats
     monitor-uri /health
 
 # Stats users - credentials loaded from environment via entrypoint script
+# Note: For production, generate password hash using: mkpasswd -m sha-256
+# Example: echo "password" | mkpasswd -m sha-256 -s
 userlist stats_users
-    user imzami password $5$saltsalt$H..3oBcIbZUCyOQJTtZ9B57TdN8Y/GXRRtBLGcG74R3
+    user "${HAPROXY_STATS_USER}" insecure-password "${HAPROXY_STATS_PASSWORD}"
 
 #-------------------------------------------------------------------------------
 # BACKEND: DoT Upstream Servers
