--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -18,3 +18,9 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
+
+  # Valkey (Redis-compatible) metrics via redis_exporter
+  # Note: Requires redis_exporter sidecar or Valkey's built-in metrics
+  - job_name: 'valkey'
+    static_configs:
+      - targets: ['redis-exporter:9121']
